# ChangeLog for media-sound/jack-rack
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
  +jack-rack-1.4.7-r1.ebuild:
  initial ebuild (import from portage + fixes)