@@ -2,6 +2,7 @@ AUX jack-rack-1.4.5-asneeded.patch 355 SHA256 ca73979ea8949ff0ed749f08c6bda8c1b9
 AUX jack-rack-1.4.6-noalsa.patch 580 SHA256 633659edadfdcf0befc89e37f6b032464e0d7385abd4bf38c6a97199deaf1856 SHA512 5b066700ef863abfc3a308b6a784beedebf85f0fa9327e2c6515a82982ef8806bcbffb765a03c52bc779fa80ee5e7ac7fd276aa89743c235fff016270b775eb8 WHIRLPOOL f5fdf61379b47e47cbbb8b1123e10748024f3c42c5cd7bba4313a565a217312de6279d0f3c5263f7b333e6f8a5de82d10225f17f3256985a2d96ba5bdadcef1c
 AUX jack-rack-1.4.7-disable_deprecated.patch 432 SHA256 d0a011ccb163cc412adc64e9a6ab8a8897a64257db7fdfec0acdb1229bcadf8b SHA512 ce4f145a6589cf5a3fd5369f662ea56e2b53e2a77ceba6c91166b952c4fe5690207ea4394da3c6bf54ce52324cef9ee2e7b3258741ce3d4f58f97af7f8d55855 WHIRLPOOL faf23e440a6ada1a4e63a614accb5c56205965124b2221a9023de687bbfcf8ae83e8607f4bb5bb9842ad6a4c706f5a917c0ffddebf461f62e106f52cb88dcd7f
 DIST jack-rack-1.4.7.tar.gz 317474 SHA256 f0e8e1e5ebe1dbc9d89d57427f1dcb65094451ce8b7c8bf56799bf5ce4b8df64 SHA512 abfcbe2b7f5de964fc6236e0f1ed1f4c47bb03d3d018fe129e1158983d3879fcc032c56c1741448f85c7de12f345ccfba3b6271b16af96db1a3e4427f9deb810 WHIRLPOOL 8a401b1f23c56f39235972cbe06f62d7c8a1ea77af51710751e053ead238605b624dba3617fb51a6c3c87da078118e8094fc0b0c323a5fb73b7b25cd87eb57ac
-EBUILD jack-rack-1.4.7-r1.ebuild 1334 SHA256 e31bc06d0bd24ab4e0c9ae80c4698231232865d5edb78cdfe12762f417e64492 SHA512 df20cd319b2a8c75bc0b74674085ff0573091e8eb821335a8e09da76d30f07b229c0586c26f5f9f2da561b74db4a67f4a5eaf758d3fb574e1d064a85b423a519 WHIRLPOOL 1cd680b9e041db2ea0d80658f4054c71fdf1c81a494c60600e484aeb2126920c528da05027aedf4650a4e13c44cb237b72be9b4c9788209334f04dcfb65f55c5
+EBUILD jack-rack-1.4.7-r1.ebuild 1357 SHA256 46947ee5b813979f77b90d63b5fa4dc41da670f15440708caced2defd93ec57f SHA512 75eaeeb40bdd394b4b4b988f2118fd997dc7b637371e92fb45669716b244f63d1a73824c4d5bbfba5388ebad4a38245d484b9a3878fe8a6a4fc09377a647fe48 WHIRLPOOL 99e130d36d39e8c42dc4d748a44a664e78634edd2ca4fd35f769db4d3bdd889b8424e6f0157895d159252b10946dff78c22c472fc30ba58c696ba0a1079ede25
+EBUILD jack-rack-9999.ebuild 1069 SHA256 250d119be2dcc250ed1c3924f6778aa689ed3ada491aa480978765fb134a4781 SHA512 aeff562afb4820067202c208ea97fb08d22e25faf63cd82f41aff196db5ef394cae60e857bdcbcd9ea763f60a535ae0c2b9aa410231d89bae2ca0be095a6131d WHIRLPOOL 61ecb2d7f28c516fcf2c365391134dbef62d03e605bbd9ab435f14064dade2b1026ce07ffbc6c5a22ddcdc2aa46b733c3a6558f060afa9cd0a76f301475e9f53
 MISC ChangeLog 265 SHA256 af2fbb20a6d55f8775af877d9a52f469517c4fa528f71170289924305668bef2 SHA512 17e84573e20a0a0e98104326e3ed31fe726150aac4a52dce43dbf5ceb4cee7a1ff087c78fd931435bb38e345f512f22905fb05c2b2404bd3211bdd0521eb8291 WHIRLPOOL 80c0de4f46e084d4e86522f24b042c9401e5286ce989e77ffa5febf68d818db3513270d43b46ad972a41fa3172ad542be37ade5d88c7836a7688b0f167b94498
 MISC metadata.xml 247 SHA256 a7865de51dec20abfda27865f687cc4cdae4625000920d3fca0825a7dd9919fc SHA512 f506b8fea7233402f8f9527e507b24f7bff4439c0bdd382ee4ebab6848b8d53fb7e7e702ebd2da7e63e263127c024bb89dde62638c3239e9733dc2474a349aa8 WHIRLPOOL 7867147a50940132ae8329346afd8cb38cb7f5eeaf62430b52db7979fb63da1648110a13a7fd2ddeb339b20de8eebaf22c9edf17e9138aadfb393712e417265f
