@@ -3,5 +3,10 @@
 # $Header: $
 
   13 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
+  +jack-rack-9999.ebuild, jack-rack-1.4.7-r1:
+  added live ebuild
+  made ebuilds more tidy
+
+  13 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
   +jack-rack-1.4.7-r1.ebuild:
   initial ebuild (import from portage + fixes)
